plugins {
    id 'java'
}

group = 'com.example'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.11.3')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs += ['--enable-preview', '--enable-native-access=ALL-UNNAMED']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--enable-preview', '--enable-native-access=ALL-UNNAMED']
}

test {
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
}